force-app/main/default/objects/ffct__CompareAndDeployJob__c/fields/ffct__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>ffct__BatchProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Process</label>
    <referenceTo>ffct__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Compare and Deploy Jobs</relationshipLabel>
    <relationshipName>CompareAndDeployJobs</relationshipName>
    <type>Lookup</type>
</CustomField>