force-app/main/default/objects/ffct__CompareAndDeployJob__c/fields/ffct__BatchProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>ffct__BatchProcessStatus__c</fullName>
    <formula>TEXT(ffct__BatchProcess__r.ffct__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Process Status</label>
    <type>Text</type>
</CustomField>