force-app/main/default/objects/ffct__CompareAndDeployJob__c/fields/ffct__ProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>ffct__ProcessStatus__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>