force-app/main/default/objects/ffct__CompareAndDeployJob__c/fields/ffct__TargetName__c.field-meta.xml
<CustomField>
    <fullName>ffct__TargetName__c</fullName>
    <description>Target API Name</description>
    <label>Target Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>