force-app/main/default/objects/ffct__CompareAndDeployJob__c/fields/ffct__Type__c.field-meta.xml
<CustomField>
    <fullName>ffct__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>